<resources>
    <string name="app_name">ParulUniverstyAttendence</string>
    <string name="university_logo">ParulUniversityLogo</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="biometric_attendance">BiometricAttendence</string>
    <string name="select_branch">Select Branch</string>
    <string name="piet">PIET</string>
    <string name="pit">PIT</string>
    <string name="ds">DS</string>
    <string name="mech">MECH</string>
    <string name="Pip">PIP</string>
    <string name="Pimsr">PIMSR</string>
    <string name="PID">PID</string>
    <string name="PIN">PIN</string>
    <string name="PIAR">PIAR</string>
    <string name="PIBA">PIBA</string>
    <string name="JNHMC">JNHMC</string>
    <string name="PIHR">PIHR</string>
    <string name="RHMC">RHMC</string>
    <string name="AHC">AHC</string>
    <string name="PICA">PICA</string>
    <string name="PIAS">PIAS</string>
    <string name="PISW">PISW</string>
    <string name="PIASR">PIASR</string>
    <string name="PIFA">PIFA</string>
    <string name="PIVE">PIVE</string>
    <string name="PILIS">PILIS</string>
    <string name="PIC">PIC</string>
    <string name="CSE">CSE</string>
    <string name="CSECORE">CSE Core</string>
    <string name="MECH">Mechanical Engineering</string>
    <string name="AERONOTICALENG">Aeronotical Engineering</string>
    <string name="AUTOMOBILEENG">Automobile Engineering</string>
    <string name="CHEMICALENG">Chemical Engineering</string>
    <string name="CVILENG">Civil Engineering</string>
    <string name="ELETRICALENG">Electrical Engineering</string>
    <string name="AGRICULTUREENG">Agriculture Engineering</string>
    <string name="PETROLIUMENG">Petroleum Engineering</string>
    <string name="AI">AI</string>
    <string name="CYBERSECURITY">Cyber Security</string>
    <string name="BIGDATA">Big Data</string>
    <string name="CLOUDCOMPUTING">Cloud Computing</string>
    <string name="IOT">IoT</string>
    <string name="BLOCKCHAINTECHNOLOGY">Blockchain Technology</string>
    <string name="ai_division">AI Division</string>
    <string name="div1">Division 1</string>
    <string name="div2">Division 2</string>
    <string name="div3">Division 3</string>
    <string name="div4">Division 4</string>
    <string name="div5">Division 5</string>
    <string name="div6">Division 6</string>
    <string name="div7">Division 7</string>
    <string name="div8">Division 8</string>
    <string name="div9">Division 9</string>
    <string name="div10">Division 10</string>
    <string name="enrollment_no">Enrollment No</string>
    <string name="enrollment">Enrollment</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>


</resources>

