<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_select_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/piet"
            android:textSize="24sp"
            android:layout_marginTop="24dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="851dp"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:padding="16dp"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="true">

            <Button
                android:id="@+id/btn_CSE"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/CSE" />

            <Button
                android:id="@+id/btn_CSECORE"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/CSECORE" />

            <Button
                android:id="@+id/btn_MECH"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/MECH" />

            <Button
                android:id="@+id/btn_AERONOTICALENG"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/AERONOTICALENG" />

            <Button
                android:id="@+id/btn_AUTOMOBILEENG"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/AUTOMOBILEENG" />

            <Button
                android:id="@+id/btn_CHEMICALENG"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/CHEMICALENG" />

            <Button
                android:id="@+id/btn_CVILENG"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/CVILENG" />

            <Button
                android:id="@+id/btn_ELETRICALENG"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/ELETRICALENG" />

            <Button
                android:id="@+id/btn_AGRICULTUREENG"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/AGRICULTUREENG" />

            <Button
                android:id="@+id/btn_PETROLIUMENG"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/PETROLIUMENG" />

        </GridLayout>
    </LinearLayout>
</ScrollView>
