<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/iv_university_logo"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/university_logo"
        android:src="@drawable/parullogo" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login" />


    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/tv_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biometric_attendance"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp" />
</LinearLayout>
